Orquestacion_Lara Esparza Diana Jazmin/docker-lampv2234/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: dlara
    labels:
      tipo: desarrollo
