Orquestacion_Lara Esparza Diana Jazmin/docker-lampv2234/deploymentdatabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-db
  labels:
    app: database
spec:
  selector: 
    matchLabels:
      app: database
      tier: data
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        tier: data
    spec:
      containers:
      - name: db
        image: djlares/database:v1
        ports: 
        - containerPort: 3306 
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
