Orquestacion_Lara Esparza Diana Jazmin/docker-lampv2234/servicedatabase.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: database
    tier: data
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: "TCP"
  selector:
    app: database
    tier: data
